--- a/code/src/services/orders/orders.api/Dockerfile
+++ b/code/src/services/orders/orders.api/Dockerfile
@@ -1,13 +1,14 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
-EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["services/orders/orders.api/orders.api.csproj", "services/orders/orders.api/"]
+COPY ["services/orders/orders.appliaction/orders.appliaction.csproj", "services/orders/orders.appliaction/"]
+COPY ["services/orders/orders.domain/orders.domain.csproj", "services/orders/orders.domain/"]
+COPY ["RabbitMQ.Events/EventBus.Messages/EventBus.Messages.csproj", "RabbitMQ.Events/EventBus.Messages/"]
+COPY ["services/orders/orders.infrastructure/orders.infrastructure.csproj", "services/orders/orders.infrastructure/"]
 RUN dotnet restore "services/orders/orders.api/orders.api.csproj"
 COPY . .
 WORKDIR "/src/services/orders/orders.api"
@@ -20,3 +21,6 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "orders.api.dll"]
+
+
+
