--- a/code/src/services/orders/orders.api/Properties/launchSettings.json
+++ b/code/src/services/orders/orders.api/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5002;http://localhost:5172",
+      "applicationUrl": "http://localhost:5172",
       "dotnetRunMessages": true
     },
     "IIS Express": {
